# eurovision2025

./: .gitignore  CLAUDE.md  README.md  check_all.py  compare_eurovibe.py  country_map.csv  cross.csv  cross.py  fetch.py  generate_charts.py  generate_charts_2026.py  mapping.json  post.md  post.qmd  post2026.md  pyproject.toml
charts/: ae_daily.csv  ar_daily.csv  au_daily.csv  bg_daily.csv  br_daily.csv  by_daily.csv  co_daily.csv  de_daily.csv  dk_daily.csv  fi_daily.csv  gb_daily.csv  global_daily.csv  gt_daily.csv  hn_daily.csv  ie_daily.csv  il_daily.csv  it_daily.csv  kr_daily.csv  lt_daily.csv  lu_daily.csv  ma_daily.csv  mx_daily.csv  ng_daily.csv  nl_daily.csv  nz_daily.csv  pa_daily.csv  pe_daily.csv  ph_daily.csv  pk_daily.csv  pl_daily.csv  ru_daily.csv  se_daily.csv  sk_daily.csv  tw_daily.csv  us_daily.csv  vn_daily.csv  za_daily.csv
charts2106/: ae_daily.csv  ar_daily.csv  au_daily.csv  be_daily.csv  by_daily.csv  cr_daily.csv  de_daily.csv  dk_daily.csv  ec_daily.csv  fi_daily.csv  gb_daily.csv  global_daily.csv  gr_daily.csv  hk_daily.csv  ie_daily.csv  in_daily.csv  jp_daily.csv  lt_daily.csv  ma_daily.csv  my_daily.csv  ng_daily.csv  ni_daily.csv  no_daily.csv  ph_daily.csv  pl_daily.csv  py_daily.csv  ro_daily.csv  sa_daily.csv  se_daily.csv  sg_daily.csv  sk_daily.csv  th_daily.csv  ua_daily.csv
kworb_charts_20260517/: at_daily.csv  au_daily.csv  be_daily.csv  bg_daily.csv  ca_daily.csv  ch_daily.csv  cl_daily.csv  co_daily.csv  do_daily.csv  ec_daily.csv  eg_daily.csv  es_daily.csv  fi_daily.csv  fr_daily.csv  gb_daily.csv  gt_daily.csv  (+26 more)
(+209 files in other folders)
