[project]
name = "eurovision2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adjusttext>=1.3.0",
    "numpy>=2.0.0",
    "beautifulsoup4>=4.14.3",
    "cartopy>=0.23.0",
    "geopandas>=1.0.0",
    "lxml>=6.1.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
]
